[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/models/weapons/dummy_gun/dummy_gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/entities/NPC/models/security_01/security_model.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/entities/NPC/base/functions/BulletDamageCalculator.gd" type="Script" id=3]
[ext_resource path="res://assets/entities/NPC/base/animation/HumanMovementAnimator.gd" type="Script" id=4]
[ext_resource path="res://assets/entities/NPC/base/animation/human_animator.tres" type="AnimationNodeBlendTree" id=5]
[ext_resource path="res://assets/entities/NPC/civilians/male_01/walk_forward_unarmed.anim" type="Animation" id=6]
[ext_resource path="res://assets/entities/NPC/civilians/male_01/idle.anim" type="Animation" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 10, 14, 10 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 15, 12, 14 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 15, 12, 14 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 8, 20, 8 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 6, 16, 6 )

[node name="security_model" instance=ExtResource( 2 )]

[node name="Armature" parent="." index="0"]
transform = Transform( 0.013, 0, 0, 0, -5.68248e-10, -0.013, 0, 0.013, -5.68248e-10, 0, 0, 0 )

[node name="BoneAttachment_gun" type="BoneAttachment" parent="Armature/Skeleton" index="1"]
transform = Transform( 0.123432, 0.560275, 0.819058, -0.388913, 0.786655, -0.4795, -0.912968, -0.259357, 0.314997, -8.91597, 46.5447, -138.871 )
bone_name = "mixamorig_RightHandThumb1"

[node name="dummy_gun" parent="Armature/Skeleton/BoneAttachment_gun" index="0" instance=ExtResource( 1 )]
transform = Transform( -2.84188, 6.3959, -0.127179, 5.7729, 2.50408, -3.06646, -2.75633, -1.34981, -6.29132, -1.90887, 4.15932, -1.32866 )

[node name="col_head" type="BoneAttachment" parent="Armature/Skeleton" index="2"]
transform = Transform( 0.975679, -0.2154, -0.0406715, 0.108448, 0.313075, 0.943516, -0.1905, -0.92498, 0.32882, -2.94806, 11.4821, -146.476 )
bone_name = "mixamorig_Head"

[node name="col_head" type="RigidBody" parent="Armature/Skeleton/col_head" index="0"]
transform = Transform( 1, 2.40771e-17, -2.77556e-17, 2.89346e-17, 1, -2.84217e-14, -2.77556e-17, 9.9476e-14, 1, 4.65661e-10, 7.66451, 3.63927 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_head/col_head" index="0"]
transform = Transform( 1, -8.39332e-18, 2.77556e-17, -7.58938e-19, 1, 0, -4.16334e-17, -2.84217e-14, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="col_spine2" type="BoneAttachment" parent="Armature/Skeleton" index="3"]
transform = Transform( 0.892017, -0.0405052, -0.450184, 0.451945, 0.0957013, 0.886897, 0.00715921, -0.994586, 0.103673, -0.189563, 4.74295, -125.525 )
bone_name = "mixamorig_Spine2"

[node name="col_spine2" type="RigidBody" parent="Armature/Skeleton/col_spine2" index="0"]
transform = Transform( 1, 3.46945e-17, -1.38778e-17, 1.21431e-17, 0.996193, -0.0871557, 8.32667e-17, 0.0871557, 0.996194, 0, 2, 2.18 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_spine2/col_spine2" index="0"]
transform = Transform( 1, 1.42109e-14, 1.38829e-17, -1.38778e-17, -4.37115e-08, 1, -1.42109e-14, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="col_spine" type="BoneAttachment" parent="Armature/Skeleton" index="4"]
transform = Transform( 0.845665, -0.0140078, -0.533529, 0.532692, 0.0839689, 0.842133, 0.0330034, -0.99637, 0.0784714, 0.662668, 2.39271, -98.682 )
bone_name = "mixamorig_Spine"

[node name="col_spine" type="RigidBody" parent="Armature/Skeleton/col_spine" index="0"]
transform = Transform( 1, 1.86483e-17, 1.38778e-17, 1.38778e-17, 0.996194, -0.0871557, 9.71445e-17, 0.0871557, 0.996194, 0, -0.0416107, 0.409283 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_spine/col_spine" index="0"]
transform = Transform( 1, 1.42109e-14, 1.38829e-17, -1.38778e-17, -4.37115e-08, 1, -1.42109e-14, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="col_rightupleg" type="BoneAttachment" parent="Armature/Skeleton" index="5"]
transform = Transform( -0.68401, -0.366973, -0.630456, -0.714069, 0.160087, 0.681535, -0.149178, 0.916353, -0.371544, -6.64374, -4.74242, -82.8515 )
bone_name = "mixamorig_RightUpLeg"

[node name="col_rightupleg" type="RigidBody" parent="Armature/Skeleton/col_rightupleg" index="0"]
transform = Transform( 1, 0, -2.03727e-10, 1.13505e-09, -3.91155e-08, -1, -4.65661e-10, 1, -3.91155e-08, -0.322514, 18.9046, 0.380244 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_rightupleg/col_rightupleg" index="0"]
transform = Transform( 1, -1.45519e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="col_leftupleg" type="BoneAttachment" parent="Armature/Skeleton" index="6"]
transform = Transform( -0.907485, 0.012007, -0.419905, -0.399288, 0.2859, 0.871106, 0.13051, 0.958184, -0.254656, 7.30104, 5.58139, -81.3481 )
bone_name = "mixamorig_LeftUpLeg"

[node name="col_leftupleg" type="RigidBody" parent="Armature/Skeleton/col_leftupleg" index="0"]
transform = Transform( 1, 0, -2.03727e-10, 1.13505e-09, -3.91155e-08, -1, -4.65661e-10, 1, -3.91155e-08, -0.322514, 18.9046, 0.380244 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_leftupleg/col_leftupleg" index="0"]
transform = Transform( 1, -1.45519e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="col_leftleg" type="BoneAttachment" parent="Armature/Skeleton" index="7"]
transform = Transform( -0.941358, 0.2043, -0.268512, -0.314398, -0.242356, 0.91783, 0.122437, 0.948432, 0.292378, 7.78305, 17.0586, -42.8826 )
bone_name = "mixamorig_LeftLeg"

[node name="col_leftleg" type="RigidBody" parent="Armature/Skeleton/col_leftleg" index="0"]
transform = Transform( 1, -4.65661e-10, -1.35333e-09, 4.51109e-10, -3.72529e-08, -1, 0, 1, -4.47035e-08, -0.376014, 19.873, 0.59803 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_leftleg/col_leftleg" index="0"]
transform = Transform( 1, -1.45519e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="col_rightleg" type="BoneAttachment" parent="Armature/Skeleton" index="8"]
transform = Transform( -0.743636, 0.00621983, -0.668566, -0.654759, -0.209175, 0.726326, -0.135331, 0.97786, 0.159617, -21.376, 1.68431, -46.0643 )
bone_name = "mixamorig_RightLeg"

[node name="col_rightleg" type="RigidBody" parent="Armature/Skeleton/col_rightleg" index="0"]
transform = Transform( 1, -1.39698e-09, -1.18744e-08, 4.36557e-09, -7.45058e-08, -1, 2.32831e-09, 1, -5.96046e-08, 0.376049, 19.8734, 0.582335 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_rightleg/col_rightleg" index="0"]
transform = Transform( 1, -1.45519e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="col_leftarm" type="BoneAttachment" parent="Armature/Skeleton" index="9"]
transform = Transform( 0.613672, 0.010989, -0.789484, -0.432339, 0.841356, -0.32435, 0.660673, 0.54037, 0.521068, 17.4323, 14.408, -134.548 )
bone_name = "mixamorig_LeftArm"

[node name="col_leftarm" type="RigidBody" parent="Armature/Skeleton/col_leftarm" index="0"]
transform = Transform( 0.994521, 0.104528, -4.56908e-09, 0, -4.37114e-08, -1, -0.104528, 0.994522, -4.34719e-08, 1.23978e-05, 11.8566, -1.52588e-05 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_leftarm/col_leftarm" index="0"]
transform = Transform( 1, -1.45448e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 9.53674e-07, 0, 4.11435 )
shape = SubResource( 5 )

[node name="col_leftforearm" type="BoneAttachment" parent="Armature/Skeleton" index="10"]
transform = Transform( 0.21266, -0.720441, -0.660106, 0.75507, 0.549951, -0.356964, 0.620198, -0.422515, 0.660936, 17.687, 33.9109, -122.022 )
bone_name = "mixamorig_LeftForeArm"

[node name="col_leftforearm" type="RigidBody" parent="Armature/Skeleton/col_leftforearm" index="0"]
transform = Transform( 0.994522, 0.104528, -4.56908e-09, 0, -4.37114e-08, -1, -0.104528, 0.994522, -4.34719e-08, 2.38419e-05, 22.2327, -0.000137329 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_leftforearm/col_leftforearm" index="0"]
transform = Transform( 1, -1.45448e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 9.53674e-07, 0, 4.11435 )
shape = SubResource( 5 )

[node name="col_rightarm" type="BoneAttachment" parent="Armature/Skeleton" index="11"]
transform = Transform( 0.68347, 0.000590917, 0.729979, 0.166567, 0.973492, -0.156743, -0.710721, 0.228719, 0.665254, -19.6828, -2.44473, -137.178 )
bone_name = "mixamorig_RightArm"

[node name="col_rightarm" type="RigidBody" parent="Armature/Skeleton/col_rightarm" index="0"]
transform = Transform( 0.994521, -0.104528, 4.56908e-09, 0, -4.37114e-08, -1, 0.104528, 0.994522, -4.34719e-08, 1.23978e-05, 11.8566, -1.52588e-05 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_rightarm/col_rightarm" index="0"]
transform = Transform( 1, -1.45448e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 9.53674e-07, 0, 4.11435 )
shape = SubResource( 5 )

[node name="col_rightforearm" type="BoneAttachment" parent="Armature/Skeleton" index="12"]
transform = Transform( 0.635274, 0.370296, 0.677723, -0.374039, 0.915286, -0.149485, -0.675664, -0.158531, 0.719963, -19.6691, 20.1212, -131.876 )
bone_name = "mixamorig_RightForeArm"

[node name="col_rightforearm" type="RigidBody" parent="Armature/Skeleton/col_rightforearm" index="0"]
transform = Transform( 0.994522, -0.104528, 4.56908e-09, 0, -4.37114e-08, -1, 0.104528, 0.994522, -4.34719e-08, 0, 22.233, 0 )
collision_layer = 16
collision_mask = 8
mode = 3
mass = 0.00102041
contacts_reported = 2
contact_monitor = true

[node name="CollisionShape" type="CollisionShape" parent="Armature/Skeleton/col_rightforearm/col_rightforearm" index="0"]
transform = Transform( 1, -1.45448e-11, -2.79397e-09, -1.86265e-09, -3.72529e-08, 1, 8.51287e-09, -1, -4.37722e-08, 9.53674e-07, 0, 4.11435 )
shape = SubResource( 5 )

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "pistol_idle-loop"
anims/idle = ExtResource( 7 )
anims/walk_forward_unarmed = ExtResource( 6 )

[node name="BulletDamageCalculator" type="Node" parent="." index="2"]
script = ExtResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = ExtResource( 5 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/TimeScale/scale = 1.3
parameters/movement_dir/blend_position = Vector2( -0.0289389, 0.225296 )
script = ExtResource( 4 )

[connection signal="body_entered" from="Armature/Skeleton/col_head/col_head" to="BulletDamageCalculator" method="_on_col_head_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_spine2/col_spine2" to="BulletDamageCalculator" method="_on_col_spine2_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_spine/col_spine" to="BulletDamageCalculator" method="_on_col_spine_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_rightupleg/col_rightupleg" to="BulletDamageCalculator" method="_on_col_rightupleg_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_leftupleg/col_leftupleg" to="BulletDamageCalculator" method="_on_col_leftupleg_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_leftleg/col_leftleg" to="BulletDamageCalculator" method="_on_col_leftleg_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_rightleg/col_rightleg" to="BulletDamageCalculator" method="_on_col_rightleg_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_leftarm/col_leftarm" to="BulletDamageCalculator" method="_on_col_leftarm_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_leftforearm/col_leftforearm" to="BulletDamageCalculator" method="_on_col_leftforearm_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_rightarm/col_rightarm" to="BulletDamageCalculator" method="_on_col_rightarm_body_entered"]
[connection signal="body_entered" from="Armature/Skeleton/col_rightforearm/col_rightforearm" to="BulletDamageCalculator" method="_on_col_rightforearm_body_entered"]
